refactor(secret): Implement interactive flow for saving secrets