@@ -1,80 +1,62 @@
 package com.onurbcd.eruservice.command;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.onurbcd.eruservice.enums.EruTable;
-import com.onurbcd.eruservice.helper.ShellHelper;
 import com.onurbcd.eruservice.dto.filter.SecretFilter;
+import com.onurbcd.eruservice.dto.secret.SecretDto;
 import com.onurbcd.eruservice.dto.secret.SecretPatchDto;
 import com.onurbcd.eruservice.dto.secret.SecretSaveDto;
+import com.onurbcd.eruservice.enums.EruTable;
+import com.onurbcd.eruservice.factory.FlowFactory;
+import com.onurbcd.eruservice.helper.ShellHelper;
+import com.onurbcd.eruservice.model.SecretSaveFlowParam;
 import com.onurbcd.eruservice.service.SecretService;
-import com.onurbcd.eruservice.util.Constant;
-import com.onurbcd.eruservice.util.Extension;
+import com.onurbcd.eruservice.util.FlowUtil;
+import com.onurbcd.eruservice.util.ValidatorUtil;
 import jakarta.validation.constraints.Min;
-import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Size;
 import lombok.RequiredArgsConstructor;
-import lombok.experimental.ExtensionMethod;
-import org.hibernate.validator.constraints.URL;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
+import org.springframework.lang.Nullable;
+import org.springframework.shell.component.flow.ComponentFlow;
 import org.springframework.shell.standard.ShellCommandGroup;
 import org.springframework.shell.standard.ShellComponent;
 import org.springframework.shell.standard.ShellMethod;
 import org.springframework.shell.standard.ShellOption;
 
+import java.util.Optional;
 import java.util.UUID;
+
+import static com.onurbcd.eruservice.util.Constant.OPERATION_CANCELLED;
 
 @ShellComponent
 @ShellCommandGroup("Secret")
 @RequiredArgsConstructor
-@ExtensionMethod({Extension.class})
 public class SecretCommand {
 
     private final SecretService service;
+    private final ComponentFlow.Builder flowBuilder;
     private final ShellHelper shellHelper;
 
     @ShellMethod(key = "secret-save", value = "Create or update a secret.")
     public String save(
-            @ShellOption(value = {"name", "-n"}, help = "The unique name of the secret.")
-            @NotBlank
-            @Size(min = 3, max = 50)
-            String name,
-
-            @ShellOption(value = {"description", "-d"}, help = "The description of the secret.", defaultValue = ShellOption.NULL)
-            @Size(min = 5, max = 250)
-            String description,
-
-            @ShellOption(value = {"link", "-l"}, help = "The link to the secret app.", defaultValue = ShellOption.NULL)
-            @URL(regexp = Constant.REGEXP_URL)
-            @Size(min = 7, max = 2048)
-            String link,
-
-            @ShellOption(value = {"username", "-u"}, help = "The username to the secret app.")
-            @NotBlank
-            @Size(min = 3, max = 50)
-            String username,
-
-            @ShellOption(value = {"password", "-p"}, help = "The password to the secret app.")
-            @NotBlank
-            @Size(min = 3, max = 50)
-            String password,
-
             @ShellOption(value = {"id", "-i"}, help = "The secret's id.", defaultValue = ShellOption.NULL)
             UUID id
     ) {
-        var secretSaveDto = SecretSaveDto
-                .builder()
-                .name(name.normalizeSpace())
-                .active(Boolean.TRUE)
-                .description(description.defaultToNull())
-                .link(link.defaultToNull())
-                .username(username.normalizeSpace())
-                .password(password.normalizeSpace())
-                .build();
+        var secretSaveDto = runSaveFlow(id);
+
+        if (secretSaveDto == null) {
+            return shellHelper.warning(OPERATION_CANCELLED);
+        }
+
+        String violations;
+
+        if ((violations = ValidatorUtil.validate(secretSaveDto)) != null) {
+            return shellHelper.error(violations);
+        }
 
         var returnId = service.save(secretSaveDto, id);
-        return String.format("Secret with id: '%s' saved with success.", returnId);
+        return shellHelper.success("Secret with id: '%s' saved with success.".formatted(returnId));
     }
 
     @ShellMethod(key = "secret-delete", value = "Delete secret by id.")
@@ -84,7 +66,7 @@ public class SecretCommand {
             UUID id
     ) {
         service.delete(id);
-        return String.format("Secret with id: '%s' deleted with success.", id);
+        return shellHelper.success("Secret with id: '%s' deleted with success.".formatted(id));
     }
 
     @ShellMethod(key = "secret-get", value = "Get secret by id.")
@@ -136,7 +118,16 @@ public class SecretCommand {
             @ShellOption(value = {"active", "-a"}, help = "The secret's status.", defaultValue = "false")
             Boolean active
     ) {
-        service.update(SecretPatchDto.builder().active(active).build(), id);
-        return String.format("Secret with id: '%s' updated with success.", id);
+        service.update(SecretPatchDto.of(active), id);
+        return shellHelper.success("Secret with id: '%s' updated with success.".formatted(id));
+    }
+
+    @Nullable
+    private SecretSaveDto runSaveFlow(@Nullable UUID id) {
+        var secret = (SecretDto) Optional.ofNullable(id).map(service::getById).orElse(null);
+        var params = SecretSaveFlowParam.of(secret);
+        var flow = FlowFactory.createSecretSaveFlow(flowBuilder, params);
+        var result = FlowUtil.runFlowSafely(flow);
+        return result != null ? SecretSaveDto.of(result.getContext(), secret) : null;
     }
 }
